@@ -18,12 +18,12 @@ use Catalyst::Controller::REST;
 
 BEGIN { require 5.008001; }
 
-our $VERSION = '0.68';
+our $VERSION = '0.69';
 
 sub new {
   my $class  = shift;
   my $config = shift;
-  Catalyst::Request::REST->_insert_self_into($config->{class});
+  Catalyst::Request::REST->_insert_self_into( $config->{class} );
   return $class->SUPER::new($config, @_);
 }
 
