@@ -1,3 +1,7 @@
+Thu Mar 26 14:16:03 PDT 2009 (hdp) - Release 0.69
+  Fix RT#32342, deprecated config loses default map (hdp)
+  Fix broken insertion of Catalyst::Request::REST for Action::REST (jshirley)
+
 Wed Mar 25 22:33:38 PDT 2009 (hdp) - Release 0.68
   Remove prompt for ancient and deprecated Data::Denter from Makefile.PL
   Remove Data::Dump, which was entirely unused
